@@ -1,164 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2012/01/08 15:52:52 wiz Exp $
-lib/u4/ultima4/ABACUS.EGA
-lib/u4/ultima4/ABACUS.PIC
-lib/u4/ultima4/ABYSS.DNG
-lib/u4/ultima4/ANIMATE.EGA
-lib/u4/ultima4/ANIMATE.PIC
-lib/u4/ultima4/AVATAR.EXE
-lib/u4/ultima4/BRICK.CON
-lib/u4/ultima4/BRIDGE.CON
-lib/u4/ultima4/BRITAIN.TLK
-lib/u4/ultima4/BRITAIN.ULT
-lib/u4/ultima4/BRUSH.CON
-lib/u4/ultima4/CAMP.CON
-lib/u4/ultima4/CAMP.DNG
-lib/u4/ultima4/CGA.DRV
-lib/u4/ultima4/CHARSET.CGA
-lib/u4/ultima4/CHARSET.EGA
-lib/u4/ultima4/COMPASSN.EGA
-lib/u4/ultima4/COMPASSN.PIC
-lib/u4/ultima4/COURAGE.EGA
-lib/u4/ultima4/COURAGE.PIC
-lib/u4/ultima4/COVE.TLK
-lib/u4/ultima4/COVE.ULT
-lib/u4/ultima4/COVETOUS.DNG
-lib/u4/ultima4/DECEIT.DNG
-lib/u4/ultima4/DEN.TLK
-lib/u4/ultima4/DEN.ULT
-lib/u4/ultima4/DESPISE.DNG
-lib/u4/ultima4/DESTARD.DNG
-lib/u4/ultima4/DNG0.CON
-lib/u4/ultima4/DNG1.CON
-lib/u4/ultima4/DNG2.CON
-lib/u4/ultima4/DNG3.CON
-lib/u4/ultima4/DNG4.CON
-lib/u4/ultima4/DNG5.CON
-lib/u4/ultima4/DNG6.CON
-lib/u4/ultima4/DNGMAP.SAV
-lib/u4/ultima4/DUNGEON.CON
-lib/u4/ultima4/EGA.DRV
-lib/u4/ultima4/EMPATH.TLK
-lib/u4/ultima4/EMPATH.ULT
-lib/u4/ultima4/FOREST.CON
-lib/u4/ultima4/GRASS.CON
-lib/u4/ultima4/GYPSY.EGA
-lib/u4/ultima4/GYPSY.PIC
-lib/u4/ultima4/HILL.CON
-lib/u4/ultima4/HINTS.DOC
-lib/u4/ultima4/HINTS.TXT
-lib/u4/ultima4/HISTORY.TXT
-lib/u4/ultima4/HONCOM.EGA
-lib/u4/ultima4/HONCOM.PIC
-lib/u4/ultima4/HONESTY.EGA
-lib/u4/ultima4/HONESTY.PIC
-lib/u4/ultima4/HONOR.EGA
-lib/u4/ultima4/HONOR.PIC
-lib/u4/ultima4/HUMILITY.EGA
-lib/u4/ultima4/HUMILITY.PIC
-lib/u4/ultima4/HYTHLOTH.DNG
-lib/u4/ultima4/INN.CON
-lib/u4/ultima4/INSIDE.EGA
-lib/u4/ultima4/INSIDE.PIC
-lib/u4/ultima4/INSTALL.BAT
-lib/u4/ultima4/JHELOM.TLK
-lib/u4/ultima4/JHELOM.ULT
-lib/u4/ultima4/JUSTICE.EGA
-lib/u4/ultima4/JUSTICE.PIC
-lib/u4/ultima4/KEY7.EGA
-lib/u4/ultima4/KEY7.PIC
-lib/u4/ultima4/KEYBOARD.DOC
-lib/u4/ultima4/LCB.TLK
-lib/u4/ultima4/LCB_1.ULT
-lib/u4/ultima4/LCB_2.ULT
-lib/u4/ultima4/LOVE.EGA
-lib/u4/ultima4/LOVE.PIC
-lib/u4/ultima4/LYCAEUM.TLK
-lib/u4/ultima4/LYCAEUM.ULT
-lib/u4/ultima4/MAGINCIA.TLK
-lib/u4/ultima4/MAGINCIA.ULT
-lib/u4/ultima4/MAP.BMP
-lib/u4/ultima4/MARSH.CON
-lib/u4/ultima4/MINOC.TLK
-lib/u4/ultima4/MINOC.ULT
-lib/u4/ultima4/MONSTERS.SAV
-lib/u4/ultima4/MOONGLOW.TLK
-lib/u4/ultima4/MOONGLOW.ULT
-lib/u4/ultima4/MOSLO.ZIP
-lib/u4/ultima4/OUTMONST.SAV
-lib/u4/ultima4/OUTSIDE.EGA
-lib/u4/ultima4/OUTSIDE.PIC
-lib/u4/ultima4/PARTY.NEW
-lib/u4/ultima4/PARTY.SAV
-lib/u4/ultima4/PAWS.TLK
-lib/u4/ultima4/PAWS.ULT
-lib/u4/ultima4/PORTAL.EGA
-lib/u4/ultima4/PORTAL.PIC
-lib/u4/ultima4/RUNE_0.EGA
-lib/u4/ultima4/RUNE_0.PIC
-lib/u4/ultima4/RUNE_1.EGA
-lib/u4/ultima4/RUNE_1.PIC
-lib/u4/ultima4/RUNE_2.EGA
-lib/u4/ultima4/RUNE_2.PIC
-lib/u4/ultima4/RUNE_3.EGA
-lib/u4/ultima4/RUNE_3.PIC
-lib/u4/ultima4/RUNE_4.EGA
-lib/u4/ultima4/RUNE_4.PIC
-lib/u4/ultima4/RUNE_5.EGA
-lib/u4/ultima4/RUNE_5.PIC
-lib/u4/ultima4/Readme.doc
-lib/u4/ultima4/SACHONOR.EGA
-lib/u4/ultima4/SACHONOR.PIC
-lib/u4/ultima4/SACRIFIC.EGA
-lib/u4/ultima4/SACRIFIC.PIC
-lib/u4/ultima4/SERPENT.TLK
-lib/u4/ultima4/SERPENT.ULT
-lib/u4/ultima4/SHAME.DNG
-lib/u4/ultima4/SHAPES.CGA
-lib/u4/ultima4/SHAPES.EGA
-lib/u4/ultima4/SHAPES.EGZ
-lib/u4/ultima4/SHIPSEA.CON
-lib/u4/ultima4/SHIPSHIP.CON
-lib/u4/ultima4/SHIPSHOR.CON
-lib/u4/ultima4/SHORE.CON
-lib/u4/ultima4/SHORSHIP.CON
-lib/u4/ultima4/SHRINE.CON
-lib/u4/ultima4/SKARA.TLK
-lib/u4/ultima4/SKARA.ULT
-lib/u4/ultima4/SPIRHUM.EGA
-lib/u4/ultima4/SPIRHUM.PIC
-lib/u4/ultima4/SPIRIT.EGA
-lib/u4/ultima4/SPIRIT.PIC
-lib/u4/ultima4/START.EGA
-lib/u4/ultima4/START.PIC
-lib/u4/ultima4/STONCRCL.EGA
-lib/u4/ultima4/STONCRCL.PIC
-lib/u4/ultima4/TANDY.DRV
-lib/u4/ultima4/THEBOOKO.DOC
-lib/u4/ultima4/THEHISTO.DOC
-lib/u4/ultima4/TITLE.EGA
-lib/u4/ultima4/TITLE.EXE
-lib/u4/ultima4/TITLE.PIC
-lib/u4/ultima4/TREE.EGA
-lib/u4/ultima4/TREE.PIC
-lib/u4/ultima4/TRINSIC.TLK
-lib/u4/ultima4/TRINSIC.ULT
-lib/u4/ultima4/TRUTH.EGA
-lib/u4/ultima4/TRUTH.PIC
-lib/u4/ultima4/ULTIMA.COM
-lib/u4/ultima4/VALJUS.EGA
-lib/u4/ultima4/VALJUS.PIC
-lib/u4/ultima4/VALOR.EGA
-lib/u4/ultima4/VALOR.PIC
-lib/u4/ultima4/VESPER.TLK
-lib/u4/ultima4/VESPER.ULT
-lib/u4/ultima4/WAGON.EGA
-lib/u4/ultima4/WAGON.PIC
-lib/u4/ultima4/WISDOM.TXT
-lib/u4/ultima4/WORLD.MAP
-lib/u4/ultima4/WRONG.DNG
-lib/u4/ultima4/YEW.TLK
-lib/u4/ultima4/YEW.ULT
-share/doc/ultima4/UltimaIV_Cloth Map.jpg
-share/doc/ultima4/Ultima_IV_-_Cluebook_-_PC.pdf
-share/doc/ultima4/Ultima_IV_-_Manual_-_PC.pdf
-share/doc/ultima4/Ultima_IV_-_Spellbook_-_PC.pdf
